@@ -1,6 +1,6 @@
 <h2 class='title'><%= _('sites') %></h2>
 
 <table id='site_list' class='admin' cellspacing="0">
-  <tr><th class='nav' colspan='10'><%= will_paginate @sites %>
+  <tr><th class='nav' colspan='10'><%= will_paginate @sites %></th></tr>
   <%= render :partial=>'sites/li',  :collection=>@sites %>
 </table>
