@@ -1,0 +1,10 @@
+<h2 class='title'><%= _('jobs') %></h2>
+
+<table id='tasks_list' class='admin jobs' cellspacing="0">
+  <tr>
+    <th do='t'>execution</th>
+    <th do='t'>info</th>
+    <th do='t'></th>
+  </tr>
+  <%= render :partial=>'sites/job',  :collection=>@jobs %>
+</table>
