@@ -232,7 +232,7 @@ module Zena
         def admin_links(opts = {})
           list = opts[:list] || 'all'
           if list == 'all'
-            list = %w{home preferences comments users groups relations virtual_classes properties iformats sites acls dev}
+            list = %w{home preferences comments jobs users groups relations virtual_classes properties iformats sites acls dev}
           else
             list = list.split(',').map(&:strip)
           end
@@ -280,6 +280,10 @@ module Zena
           when 'acls'
             return nil unless visitor.is_admin?
             link_to_with_state(_('acls'), acls_path)
+          when 'jobs'
+            puts Bricks::CONFIG['worker'].inspect
+            return nil unless visitor.is_admin? && Bricks::CONFIG['worker']
+            link_to_with_state(_('jobs'), jobs_site_path(current_site[:id]))
           when 'dev'
             return nil unless visitor.is_admin?
             if visitor.dev_skin_id
@@ -599,7 +603,7 @@ module Zena
 
           params = {}
           @params.each do |k,v|
-            next if [:attr, :eval, :text, :t].include?(k)
+            next if [:attr, :eval, :text, :t, :update].include?(k)
             v = RubyLess.translate_string(self, v)
             if v.literal
               params[k] = CGI.escape(v.literal)
@@ -607,8 +611,22 @@ module Zena
               params[k] = "<%= CGI.escape(#{v}) %>"
             end
           end
+          
+          if upd = @params[:update]
+            js = ""
+            with_context(:node => node(Node)) do
+              href = make_href(upd)
+              name = get_var_name('add_document', 'update')
+
+              txt = "%Q{#{name}\#{#{node}.zip} = function() {new Ajax.Request(\"\#{#{href}}\", {asynchronous:true, evalScripts:true, method:\"get\"})}}"
+              js = "<% js_data << #{txt} %>"
+              # Evaluated before the add_document page is opened.
+              params[:js] = "<%= CGI.escape(\"Zena.t().#{name}\#{#{node}.zip}();\") %>"
+            end
+          end
+          
           res = node_action_link('add_doc', "<%= #{node}.zip %>", :text => text_for_link(''), :params => params)
-          "<% if #{node}.can_write? %>#{wrap(res)}<% end %>"
+          "<% if #{node}.can_write? %>#{js}#{wrap(res)}<% end %>"
         end
 
         # Find icon through a relation named 'icon' or use first image child
