@@ -17,6 +17,8 @@
  * Support for 'to_date' on time object with proper timezone translation. <===== TODO: Document
  * Time to 'year' should use timezone.
  * Added tprefix to [select] (with default value) to ease translated options for select. <===== TODO: Document
+ * Fixed bug when using [input] checkbox with param.
+ * Added jobs list in admin links.
 
 == 1.1.3 2011-11-09
 
